RESOLVED FIXED219290
AXObjectCache::focusedObjectForPage() is not defined when ENABLE(ACCESSIBILITY) is off
https://bugs.webkit.org/show_bug.cgi?id=219290
Summary AXObjectCache::focusedObjectForPage() is not defined when ENABLE(ACCESSIBILIT...
Yoshiaki Jitsukawa
Reported 2020-11-25 17:35:06 PST
AXObjectCache::focusedObjectForPage() is not defined when ENABLE(ACCESSIBILITY) is tuned off and build fails.
Attachments
Patch1 (1.42 KB, patch)
2020-11-25 17:45 PST, Yoshiaki Jitsukawa
no flags
Patch2 (2.12 KB, patch)
2020-11-25 17:46 PST, Yoshiaki Jitsukawa
cfleizach: review+
ews-feeder: commit-queue-
Patch (fix tabs in the change log) (2.12 KB, patch)
2020-11-26 16:10 PST, Yoshiaki Jitsukawa
no flags
Yoshiaki Jitsukawa
Comment 1 2020-11-25 17:45:26 PST
Yoshiaki Jitsukawa
Comment 2 2020-11-25 17:46:06 PST
Yoshiaki Jitsukawa
Comment 3 2020-11-25 17:54:04 PST
Hello, Chris, Andres. I came across this with PlayStation build and prepared two versions of patches (Patch1 and Patch2)but I'm not sure which one is better. Would you please review?
Radar WebKit Bug Importer
Comment 4 2020-11-26 03:28:00 PST
EWS
Comment 5 2020-11-26 16:05:19 PST
commit-queue failed to commit attachment 414872 [details] to WebKit repository.
Yoshiaki Jitsukawa
Comment 6 2020-11-26 16:10:36 PST
Created attachment 414910 [details] Patch (fix tabs in the change log)
EWS
Comment 7 2020-11-26 17:22:20 PST
Committed r270172: <https://trac.webkit.org/changeset/270172> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414910 [details].
Note You need to log in before you can comment on or make changes to this bug.