AXObjectCache::focusedObjectForPage() is not defined when ENABLE(ACCESSIBILITY) is off https://bugs.webkit.org/show_bug.cgi?id=219290

Reviewed by Chris Fleizach.

Define AXObjectCache::focusedObjectForPage() as a function which
returns a nullptr.

* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::focusedObjectForPage): Defined.


Canonical link: https://commits.webkit.org/231881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270172 268f45cc-cd09-0410-ab3c-d52691b4dbfc